[gd_scene load_steps=34 format=2]

[ext_resource path="res://ship/flame.png" type="Texture" id=1]
[ext_resource path="res://ship/explosion.png" type="Texture" id=2]
[ext_resource path="res://ship/sheep_cropped.png" type="Texture" id=5]
[ext_resource path="res://ship/PlanetShip.gd" type="Script" id=6]

[sub_resource type="PhysicsMaterial" id=35]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0.5, 0.5 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 10, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 20, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 30, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 40, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 50, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 70, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 90, 0, 10, 10 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 33 ), null ],
"loop": false,
"name": "New Anim",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 1, 1 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 1, 0, 1, 1 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 2, 0, 1, 1 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 3, 0, 1, 1 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 4, 0, 1, 1 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 5, 0, 1, 1 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "0",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 10, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 20, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 30, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 40, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 50, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 70, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 90, 0, 10, 10 )

[sub_resource type="SpriteFrames" id=47]
animations = [ {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": false,
"name": "New Anim",
"speed": 12.0
} ]

[node name="PlanetShip" type="RigidBody2D"]
collision_layer = 128
collision_mask = 128
mass = 10.0
physics_material_override = SubResource( 35 )
angular_damp = 100.0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="ExplosionSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 23 )
animation = "New Anim"
frame = 9
playing = true

[node name="Ship" type="Sprite" parent="."]
position = Vector2( 4, 5 )
texture = ExtResource( 5 )
hframes = 16

[node name="Flame1" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 3.5, 6.5 )
frames = SubResource( 37 )
animation = "0"
speed_scale = 2.5

[node name="Flame2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 5.5, 6.5 )
frames = SubResource( 37 )
animation = "0"
speed_scale = 2.5

[node name="Flame3" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 2.5, 5.5 )
frames = SubResource( 37 )
animation = "0"
speed_scale = 2.5

[node name="Flame4" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 2.5, 3.5 )
frames = SubResource( 37 )
animation = "0"
frame = 5
speed_scale = 2.5

[node name="Flame5" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 3.5, 2.5 )
frames = SubResource( 37 )
animation = "0"
speed_scale = 2.5

[node name="Flame6" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 5.5, 2.5 )
frames = SubResource( 37 )
animation = "0"
speed_scale = 2.5

[node name="Flame7" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 6.5, 3.5 )
frames = SubResource( 37 )
animation = "0"
frame = 5
speed_scale = 2.5

[node name="Flame8" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 6.5, 5.5 )
frames = SubResource( 37 )
animation = "0"
frame = 4
speed_scale = 2.5

[node name="ExplosionSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 4, 5 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 47 )
animation = "New Anim"
frame = 8
playing = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 5, 7 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 1 )
initial_velocity = 12.0
initial_velocity_random = 0.25
damping = 5.0
color = Color( 1, 0, 0, 1 )
hue_variation = 0.2
hue_variation_random = 0.3
